--- a/seat-query-side.yml
+++ b/seat-query-side.yml
@@ -19,16 +19,16 @@ spring:
     data:
         rest:
             #base-path: api/v1
-logging:
-    level:
-        root: INFO
-        org.springframework: INFO
-            #aop: DEBUG
-            #dao: DEBUG
-            #orm: DEBUG
-            #amqp: DEBUG
-            #data: DEBUG
-            #transaction: DEBUG
-        org.axonframework: INFO
-        com.soagrowers: DEBUG
-    file: ./build/logs/query-side-server.log
+# logging:
+#     level:
+#         root: INFO
+#         org.springframework: INFO
+#             #aop: DEBUG
+#             #dao: DEBUG
+#             #orm: DEBUG
+#             #amqp: DEBUG
+#             #data: DEBUG
+#             #transaction: DEBUG
+#         org.axonframework: INFO
+#         com.soagrowers: DEBUG
+#     file: ./build/logs/query-side-server.log
